Base code for the demo

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,3 +1,9 @@
 parameters:
 
 services:
+    greeter.simple:
+        class: App\Greeter\SimpleGreeter
+    greeter.controller:
+        class: App\Controller\GreeterController
+        arguments:
+            - "@greeter.simple"
